--- a/workflows/training_workflow.yaml
+++ b/workflows/training_workflow.yaml
@@ -1,66 +1,48 @@
 # Cloud Workflow: quarterly training job orchestration for Economedia PTS.
 # Launches a Vertex AI Custom Job running the training container with
-# explicit window parameters and env-based configuration.
+# explicit window parameters.
 
 main:
-  params: [
-    project_id,
-    region,
-    start_date,
-    freeze_date,
-    dne_start,
-    cap_wall1_offer_start,
-    primary_label,
-    training_image,
-    machine_type,
-    service_account,
-    bq_dataset,
-    gcs_model_bucket,  
-    vertex_model_display_name,
-    vertex_model_registry_label
-  ]
+  # 💡 FIX 1: Consolidate all parameters into a single map (e.g., 'input')
+  params: [input]
   steps:
     - defaults:
         assign:
-          # Core infra defaults
-          - project: ${project_id or "propensity-to-subscr-eng-prod"}
-          - location: ${region or "europe-west3"}
-          - image: ${training_image or "europe-west3-docker.pkg.dev/propensity-to-subscr-eng-prod/pts-model/training:latest"}
-          - machine: ${machine_type or "e2-standard-4"}
-          - sa: ${service_account or "sa-ml-train@propensity-to-subscr-eng-prod.iam.gserviceaccount.com"}
+          - project: ${default(input.project_id, "propensity-to-subscr-eng-prod")}
+          - location: ${default(input.region, "europe-west3")}
+          - image: ${default(input.training_image, "europe-west3-docker.pkg.dev/propensity-to-subscr-eng-prod/pts-model/training:latest")}
+          - machine: ${default(input.machine_type, "e2-standard-8")}
+          - sa: ${default(input.service_account, "sa-ml-train@propensity-to-subscr-eng-prod.iam.gserviceaccount.com")}
+        
+          - run_id: sys.uuid()
+          - now: sys.now()
 
-          # App/config defaults (what your code expects via load_env_config)
-          - dataset: ${bq_dataset or "propensity_to_subscribe"}
-          - model_bucket: ${gcs_model_bucket or "gs://economedia-pts-models"}
-          - model_display: ${vertex_model_display_name or "pts_xgb_model"}
-          - registry_label: ${vertex_model_registry_label or "propensity_to_subscribe"}
-
-          # Traceable, time-sortable run id (matches your code's default format)
-          - run_id: ${time.format(sys.now(), "%Y%m%dT%H%M%SZ")}
-
-          # Window resolution (your original logic)
-          - now: ${sys.now()}
-          - resolved_freeze: ${freeze_date or time.format(time.add(now, duration("-P7D")), "%Y-%m-%d")}
-          - freeze_ts: ${time.parse(resolved_freeze + "T00:00:00Z")}
-          - resolved_start: ${start_date or time.format(time.add(freeze_ts, duration("-P180D")), "%Y-%m-%d")}
-          - resolved_dne_start: ${dne_start or resolved_start}
-          - resolved_cap_start: ${cap_wall1_offer_start or resolved_start}
-
-          # Container args (entrypoint parses these)
-          - base_args: [
-              "--start_date", ${resolved_start},
-              "--freeze_date", ${resolved_freeze},
-              "--dne_start", ${resolved_dne_start},
-              "--cap_wall1_offer_start", ${resolved_cap_start}
-            ]
-          - args: ${primary_label ? base_args + ["--primary_label", primary_label] : base_args}
+          - resolved_freeze_0: ${default(input.freeze_date, time.format(sys.now() - 7*86400))} 
+          - resolved_freeze: ${text.split(resolved_freeze_0, "T")[0]}
+          - freeze_ts: ${resolved_freeze + "T00:00:00Z"}
+          - resolved_start_0: ${time.format(time.parse(freeze_ts) - 180*86400)}
+          - resolved_start: ${text.split(resolved_start_0, "T")[0]}
+          - resolved_dne_start: ${default(input.dne_start, resolved_start)}
+          - resolved_cap_start: ${default(input.cap_wall1_offer_start, resolved_start)}
+          - base_args:
+              - "--start_date"
+              - ${resolved_start}
+              - "--freeze_date"
+              - ${resolved_freeze}
+              - "--dne_start"
+              - ${resolved_dne_start}
+              - "--cap_wall1_offer_start"
+              - ${resolved_cap_start}
+          - job_args: ${list.concat(base_args, if(input.primary_label, ["--primary_label", input.primary_label], []))} 
 
     - launch_training:
         call: googleapis.aiplatform.v1.projects.locations.customJobs.create
         args:
+          # region argument is required for the connector
+          region: ${location}  
           parent: ${"projects/" + project + "/locations/" + location}
           body:
-            displayName: ${"pts-training-" + run_id[:8]}
+            displayName: ${"pts-training-" + text.substring(run_id, 0, 8)}
             jobSpec:
               serviceAccount: ${sa}
               workerPoolSpecs:
@@ -69,36 +51,23 @@ main:
                   replicaCount: 1
                   containerSpec:
                     imageUri: ${image}
-                    args: ${args}
-                    env:
-                      # Environment variables your code reads via load_env_config()
-                      - name: PROJECT_ID
-                        value: ${project}
-                      - name: REGION
-                        value: ${location}
-                      - name: BQ_DATASET
-                        value: ${dataset}
-                      - name: GCS_MODEL_BUCKET
-                        value: ${model_bucket}
-                      - name: VERTEX_MODEL_DISPLAY_NAME
-                        value: ${model_display}
-                      - name: VERTEX_MODEL_REGISTRY_LABEL
-                        value: ${registry_label}
-                      - name: RUN_ID
-                        value: ${run_id}
+                    args: ${job_args}
+          connector_params:
+            timeout: 216000
         result: training_job
-
+    
     - wait_initial:
         call: sys.sleep
         args:
           seconds: 30
-
+    
     - poll_status:
         call: googleapis.aiplatform.v1.projects.locations.customJobs.get
         args:
           name: ${training_job.name}
+          region: ${location}  
         result: job_state
-
+    
     - check_status:
         switch:
           - condition: ${job_state.state == "JOB_STATE_SUCCEEDED"}
@@ -108,9 +77,9 @@ main:
               runId: ${run_id}
           - condition: ${job_state.state in ["JOB_STATE_FAILED", "JOB_STATE_CANCELLED", "JOB_STATE_PAUSED"]}
             raise: ${"Training job ended with state " + job_state.state}
-          - default:
-              next: wait_loop
-
+          - condition: ${true}
+            next: wait_loop
+            
     - wait_loop:
         call: sys.sleep
         args:
