--- a/containers/requirements-inference.txt
+++ b/containers/requirements-inference.txt
@@ -1,6 +1,7 @@
 google-cloud-aiplatform==1.45.0
 google-cloud-bigquery==3.12.0
 google-cloud-bigquery-storage==2.24.0
+db-dtypes==1.1.1
 google-cloud-storage==2.11.0
 google-cloud-logging==3.10.0
 joblib==1.3.2
